# persian-linux-rag

./: .gitattributes  .gitignore  README.md  librechat.ipynb  requirements.txt
backend/: .env.example  README.md  constraints.txt  pyproject.toml  requirements.txt
backend/persian_linux_rag/: main.py
backend/persian_linux_rag/app/adapters/: cohere_client.py  embeddings_lc.py  vectordb.py
backend/persian_linux_rag/app/api/: ask.py  ask_stream.py  feedback.py  health.py  ingest.py  sources.py
backend/persian_linux_rag/app/core/: config.py  deps.py
backend/persian_linux_rag/app/graphs/: query_chain.py
backend/persian_linux_rag/app/models/: schemas.py
backend/tests/: test_health.py
notebooks/: librechat.ipynb
scripts/: stallman_scrape.py
