[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-linux-rag-backend-lc"
version = "0.1.0"
description = "LangChain-based FastAPI backend for Persian Linux RAG (Phase 1)"
authors = [{name = "salarSb"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.0",
    "redis>=5.0.0",
    "cohere>=5.5.8",
    "chromadb>=0.5.5",
    "httpx>=0.27.2",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-cohere>=0.3.0,<0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["persian_linux_rag*"]
